Update versions for windows component

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -91,6 +91,9 @@ components:
   deep-packet-inspection:
     image: tigera/deep-packet-inspection
     version: master
+  windows:
+    image: tigera/calico-windows-upgrade
+    version: master
   # The components below are third-party images that have been retagged under
   # quay.io/tigera so all enterprise images come from the same repository and org.
   elasticsearch-operator:
