--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -7,9 +7,15 @@ agent:
 global_job_config:
   secrets:
   - name: docker-hub
+  # Mount the github SSH secret for pulling private repositories.
+  - name: private-repo
   prologue:
     commands:
     - echo $DOCKERHUB_PASSWORD | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
+    # Correct permissions since they are too open by default:
+    - chmod 0600 ~/.keys/*
+    # Add the key to the ssh agent:
+    - ssh-add ~/.keys/*
 
 blocks:
   - name: Build
