--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -1,5 +1,7 @@
 title: master
 components:
+  libcalico-go:
+    version: master
   cnx-manager:
     image: tigera/cnx-manager
     version: master
