--- a/config/samples/operator_v1_applicationlayer.yaml
+++ b/config/samples/operator_v1_applicationlayer.yaml
@@ -1,5 +1,5 @@
 apiVersion: operator.tigera.io/v1
 kind: ApplicationLayer
 metadata:
-  name: applicationlayer-sample
+  name: tigera-secure
 spec: {}
