--- a/config/crd/bases/operator.tigera.io_applicationlayers.yaml
+++ b/config/crd/bases/operator.tigera.io_applicationlayers.yaml
@@ -46,6 +46,7 @@ spec:
                     description: 'Interval in seconds for sending L7 log information
                       for processing. Default: 5 sec'
                     format: int64
+                    minimum: 1
                     type: integer
                   logRequestsPerInterval:
                     description: 'Maximum number of unique L7 logs that are sent LogIntervalSeconds.
