--- a/deploy/crds/calico/02-crd-ipreservation.yaml
+++ b/deploy/crds/calico/02-crd-ipreservation.yaml
@@ -3,14 +3,17 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ipamhandles.crd.projectcalico.org
+  annotations:
+    controller-gen.kubebuilder.io/version: (devel)
+  creationTimestamp: null
+  name: ipreservations.crd.projectcalico.org
 spec:
   group: crd.projectcalico.org
   names:
-    kind: IPAMHandle
-    listKind: IPAMHandleList
-    plural: ipamhandles
-    singular: ipamhandle
+    kind: IPReservation
+    listKind: IPReservationList
+    plural: ipreservations
+    singular: ipreservation
   scope: Cluster
   versions:
   - name: v1
@@ -30,20 +33,15 @@ spec:
           metadata:
             type: object
           spec:
-            description: IPAMHandleSpec contains the specification for an IPAMHandle
+            description: IPReservationSpec contains the specification for an IPReservation
               resource.
             properties:
-              block:
-                additionalProperties:
-                  type: integer
-                type: object
-              deleted:
-                type: boolean
-              handleID:
-                type: string
-            required:
-            - block
-            - handleID
+              reservedCIDRs:
+                description: ReservedCIDRs is a list of CIDRs and/or IP addresses
+                  that Calico IPAM will exclude from new allocations.
+                items:
+                  type: string
+                type: array
             type: object
         type: object
     served: true
