--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -2,7 +2,7 @@ version: v1.0
 name: Initial Pipeline
 agent:
   machine:
-    type: e1-standard-4
+    type: e1-standard-8
     os_image: ubuntu1804
 global_job_config:
   secrets:
@@ -16,6 +16,14 @@ global_job_config:
     - chmod 0600 ~/.keys/*
     # Add the key to the ssh agent:
     - ssh-add ~/.keys/*
+    # Free up some space
+    - sudo rm -rf ~/.kiex ~/.phpbrew ~/.rbenv ~/.nvm ~/.kerl
+    # Semaphore mounts a copy-on-write FS as /var/lib/docker in order to provide a pre-loaded cache of
+    # some images. However, the cache is not useful to us and the copy-on-write FS is a big problem given
+    # how much we churn docker containers during testing.  Disable it.
+    - sudo systemctl stop docker
+    - sudo umount /var/lib/docker && sudo killall qemu-nbd || true
+    - sudo systemctl start docker
 
 blocks:
   - name: Build
