--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -2,7 +2,7 @@ version: v1.0
 name: Initial Pipeline
 agent:
   machine:
-    type: e1-standard-4
+    type: e1-standard-8
     os_image: ubuntu1804
 global_job_config:
   secrets:
@@ -16,6 +16,8 @@ global_job_config:
     - chmod 0600 ~/.keys/*
     # Add the key to the ssh agent:
     - ssh-add ~/.keys/*
+    # Free up some space
+    - sudo rm -rf ~/.kiex ~/.phpbrew ~/.rbenv ~/.nvm ~/.kerl
 
 blocks:
   - name: Build
