comments(versions): add comments where to keep componenets in syc

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -1,3 +1,4 @@
+# Components defined here are required to be kept in sync with hack/gen-versions/enterprise.go.tpl
 title: master
 components:
   libcalico-go:
