--- a/config/calico_versions.yml
+++ b/config/calico_versions.yml
@@ -1,3 +1,4 @@
+# Components defined here are required to be kept in sync with hack/gen-versions/calico.go.tpl
 title: master
 components:
   libcalico-go:
